# SonoWare-Viewer

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  build.rs  filter_config.json
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: data.rs  main.rs  test.rs
src/a_scan_view/: imp.rs  mod.rs
src/load/: data.rs
src/main_view/: imp.rs  mod.rs
static_files/css/: main.css  reference.css
static_files/js/: global.config.js  index.js  reference_view.js  single_view.js
templates/: help.html.tera  index.html.tera  main_view.xml  multi_view.html.tera  reference.html.tera  resources.gresource.xml  single_view.html.tera
test_scans/: AScanDummy_0_0.itx  AScanDummy_17_42.itx  AScanDummy_91_56.itx
