[package]
name = "us-viewer"
version = "0.3.1"
authors = ["Forschungszentrum Ultraschall gGmbH <kontakt@fz-u.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
open = "5.0.0"
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
rocket_dyn_templates = {version = "0.1.0-rc.3", features = ["tera"]}
serde = "1.0.188"
zip = "0.6.6"
