[package]
name = "sonoware-viewer"
version = "1.0.2"
authors = ["Forschungszentrum Ultraschall gGmbH <kontakt@fz-u.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
iir_filters = "0.1.3"
ndarray = "0.15.6"
open = "5.1.3"
regex = "1.10.4"
rocket = {version = "=0.5.0", features = ["json"]}
rocket_dyn_templates = {version = "0.1.0", features = ["tera"]}
serde = "1.0.197"
serde_json = "1.0.115"
zip = "1.1.2"
