[package]
name = "sonoware-viewer"
version = "1.0.2"
authors = ["Forschungszentrum Ultraschall gGmbH <kontakt@fz-u.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
iir_filters = "0.1.3"
ndarray = "0.16.1"
open = "5.3.1"
regex = "1.11.1"
rocket = {version = "=0.5.1", features = ["json"]}
rocket_dyn_templates = {version = "0.2.0", features = ["tera"]}
serde = "1.0.216"
serde_json = "1.0.135"
zip = "2.2.1"
